<?xml version="1.0"?>
<package>
  <name>tracker_cpu</name>
  <version>0.1.0</version>
  <description>tracker using brisk on single core</description>
  <license>BSD</license>
  <url type="website">http://www.robocoffee.org</url>
  <author email="pieropan@kth.se">Alessandro Pieropan</author>
  <maintainer email="pieropan@kth.se">Alessandro Pieropan</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>utilities</build_depend>
  <build_depend>clustering</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>utilities</run_depend>
  <run_depend>clustering</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
