<?xml version="1.0"?>
<package>
  <name>utilities</name>
  <version>0.1.0</version>
  <description>general debug utilities</description>
  <license>BSD</license>
  <url type="website">http://www.robocoffee.org</url>
  <author email="pieropan@kth.se">Alessandro Pieropan</author>
  <maintainer email="pieropan@kth.se">Alessandro Pieropan</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
